{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 442,
  "lineage": "4d14f1c2-4887-d15f-c5b0-224c232cbd78",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "PBlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB/frontendIPConfigurations/PublicIPForLB",
                "load_balancer_rules": [
                  "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB/loadBalancingRules/LB8080"
                ],
                "name": "PublicIPForLB",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB"
              }
            ],
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB",
            "location": "westus2",
            "name": "PublicLB",
            "resource_group_name": "Week4-Project",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.arg",
            "azurerm_public_ip.PBip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "PRlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB/frontendIPConfigurations/FrontIP",
                "load_balancer_rules": [
                  "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB/loadBalancingRules/LB5432"
                ],
                "name": "FrontIP",
                "private_ip_address": "10.0.3.8",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Private"
              }
            ],
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB",
            "location": "westus2",
            "name": "PrivateLB",
            "private_ip_address": "10.0.3.8",
            "private_ip_addresses": [
              "10.0.3.8"
            ],
            "resource_group_name": "Week4-Project",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.arg",
            "azurerm_subnet.prsb",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "BP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/pbNIC1/ipConfigurations/ipConf1",
              "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/pbNIC0/ipConfigurations/ipConf0"
            ],
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB/backendAddressPools/BP1",
            "load_balancing_rules": [
              "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB/loadBalancingRules/LB8080"
            ],
            "loadbalancer_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB",
            "name": "BP1",
            "resource_group_name": "Week4-Project"
          },
          "dependencies": [
            "azurerm_lb.PBlb",
            "azurerm_public_ip.PBip",
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "BP2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/prNIC1/ipConfigurations/ipConf1",
              "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/prNIC0/ipConfigurations/ipConf0"
            ],
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB/backendAddressPools/BP1",
            "load_balancing_rules": [
              "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB/loadBalancingRules/LB5432"
            ],
            "loadbalancer_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB",
            "name": "BP1",
            "resource_group_name": "Week4-Project"
          },
          "dependencies": [
            "azurerm_subnet.prsb",
            "azurerm_virtual_network.vnet1",
            "azurerm_lb.PRlb",
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "HP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB/probes/HP",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB/loadBalancingRules/LB8080"
            ],
            "loadbalancer_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB",
            "name": "HP",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Tcp",
            "resource_group_name": "Week4-Project"
          },
          "dependencies": [
            "azurerm_lb.PBlb",
            "azurerm_public_ip.PBip",
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "HP2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB/probes/HP",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB/loadBalancingRules/LB5432"
            ],
            "loadbalancer_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB",
            "name": "HP",
            "number_of_probes": 2,
            "port": 5432,
            "protocol": "Tcp",
            "resource_group_name": "Week4-Project"
          },
          "dependencies": [
            "azurerm_lb.PRlb",
            "azurerm_resource_group.arg",
            "azurerm_subnet.prsb",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "LB5432",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB/backendAddressPools/BP1",
            "backend_port": 5432,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB/frontendIPConfigurations/FrontIP",
            "frontend_ip_configuration_name": "FrontIP",
            "frontend_port": 5432,
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB/loadBalancingRules/LB5432",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB",
            "name": "LB5432",
            "probe_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB/probes/HP",
            "protocol": "Tcp",
            "resource_group_name": "Week4-Project"
          },
          "dependencies": [
            "azurerm_lb_backend_address_pool.BP2",
            "azurerm_lb_probe.HP2",
            "azurerm_resource_group.arg",
            "azurerm_subnet.prsb",
            "azurerm_virtual_network.vnet1",
            "azurerm_lb.PRlb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "LB8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB/backendAddressPools/BP1",
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB/frontendIPConfigurations/PublicIPForLB",
            "frontend_ip_configuration_name": "PublicIPForLB",
            "frontend_port": 8080,
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB/loadBalancingRules/LB8080",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB",
            "name": "LB8080",
            "probe_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB/probes/HP",
            "protocol": "Tcp",
            "resource_group_name": "Week4-Project"
          },
          "dependencies": [
            "azurerm_public_ip.PBip",
            "azurerm_resource_group.arg",
            "azurerm_lb.PBlb",
            "azurerm_lb_backend_address_pool.BP1",
            "azurerm_lb_probe.HP1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "BP1AA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB/backendAddressPools/BP1",
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/pbNIC0/ipConfigurations/ipConf0|/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB/backendAddressPools/BP1",
            "ip_configuration_name": "ipConf0",
            "network_interface_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/pbNIC0"
          },
          "dependencies": [
            "azurerm_subnet.pbsb",
            "azurerm_virtual_network.vnet1",
            "module.PublicVM.azurerm_network_interface.NIC",
            "azurerm_lb.PBlb",
            "azurerm_lb_backend_address_pool.BP1",
            "azurerm_public_ip.PBip",
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "BP2AA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB/backendAddressPools/BP1",
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/pbNIC1/ipConfigurations/ipConf1|/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PublicLB/backendAddressPools/BP1",
            "ip_configuration_name": "ipConf1",
            "network_interface_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/pbNIC1"
          },
          "dependencies": [
            "module.PublicVM.azurerm_network_interface.NIC",
            "azurerm_lb.PBlb",
            "azurerm_lb_backend_address_pool.BP1",
            "azurerm_public_ip.PBip",
            "azurerm_resource_group.arg",
            "azurerm_subnet.pbsb",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "BP3AA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB/backendAddressPools/BP1",
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/prNIC0/ipConfigurations/ipConf0|/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB/backendAddressPools/BP1",
            "ip_configuration_name": "ipConf0",
            "network_interface_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/prNIC0"
          },
          "dependencies": [
            "azurerm_lb.PRlb",
            "azurerm_lb_backend_address_pool.BP2",
            "azurerm_resource_group.arg",
            "azurerm_subnet.prsb",
            "azurerm_virtual_network.vnet1",
            "module.PrivateVM.azurerm_network_interface.NIC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "BP4AA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB/backendAddressPools/BP1",
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/prNIC1/ipConfigurations/ipConf1|/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/loadBalancers/PrivateLB/backendAddressPools/BP1",
            "ip_configuration_name": "ipConf1",
            "network_interface_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/prNIC1"
          },
          "dependencies": [
            "azurerm_subnet.prsb",
            "azurerm_virtual_network.vnet1",
            "module.PrivateVM.azurerm_network_interface.NIC",
            "azurerm_lb.PRlb",
            "azurerm_lb_backend_address_pool.BP2",
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "pbnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkSecurityGroups/Public-NSG",
            "location": "westus2",
            "name": "Public-NSG",
            "resource_group_name": "Week4-Project",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDPin",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "RDPout",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "8080in",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "8080out",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "prnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkSecurityGroups/Private-NSG",
            "location": "westus2",
            "name": "Private-NSG",
            "resource_group_name": "Week4-Project",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSHin",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "SSHout",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "5432in",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "8080out",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PBip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.94.215.201",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "PublicIPForLB",
            "resource_group_name": "Week4-Project",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "pbsb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Public",
            "name": "Public",
            "resource_group_name": "Week4-Project",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.arg",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "prsb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Private",
            "name": "Private",
            "resource_group_name": "Week4-Project",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.arg",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "pbsbNsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Public",
            "network_security_group_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkSecurityGroups/Public-NSG",
            "subnet_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Public"
          },
          "dependencies": [
            "azurerm_network_security_group.pbnsg",
            "azurerm_resource_group.arg",
            "azurerm_subnet.pbsb",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "prsbNsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Private",
            "network_security_group_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkSecurityGroups/Private-NSG",
            "subnet_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Private"
          },
          "dependencies": [
            "azurerm_resource_group.arg",
            "azurerm_subnet.prsb",
            "azurerm_virtual_network.vnet1",
            "azurerm_network_security_group.prnsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.2.0/23"
            ],
            "guid": "1919fd6d-5c7c-4105-88e8-e09f0081966a",
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/virtualNetworks/vnet1",
            "location": "westus2",
            "name": "vnet1",
            "resource_group_name": "Week4-Project",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Public",
                "name": "Public",
                "security_group": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkSecurityGroups/Public-NSG"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Private",
                "name": "Private",
                "security_group": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkSecurityGroups/Private-NSG"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "module": "module.PrivateVM[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/prNIC0",
            "internal_domain_name_suffix": "nx4rsgl2lqcudchi2cpqbamwnc.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipConf0",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Private"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-FC-C7-1A",
            "name": "prNIC0",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "Week4-Project",
            "virtual_machine_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Compute/virtualMachines/PrivateVM0"
          },
          "dependencies": [
            "azurerm_resource_group.arg",
            "azurerm_subnet.prsb",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.PrivateVM[1]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/prNIC1",
            "internal_domain_name_suffix": "nx4rsgl2lqcudchi2cpqbamwnc.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipConf1",
                "primary": true,
                "private_ip_address": "10.0.3.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Private"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-FF-68-EF",
            "name": "prNIC1",
            "private_ip_address": "10.0.3.5",
            "private_ip_addresses": [
              "10.0.3.5"
            ],
            "resource_group_name": "Week4-Project",
            "virtual_machine_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Compute/virtualMachines/PrivateVM1"
          },
          "dependencies": [
            "azurerm_resource_group.arg",
            "azurerm_subnet.prsb",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.PublicVM[0]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/pbNIC0",
            "internal_domain_name_suffix": "nx4rsgl2lqcudchi2cpqbamwnc.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipConf0",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Public"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-FC-CB-F3",
            "name": "pbNIC0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Week4-Project",
            "virtual_machine_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Compute/virtualMachines/PublicVM0"
          },
          "dependencies": [
            "azurerm_subnet.pbsb",
            "azurerm_virtual_network.vnet1",
            "azurerm_resource_group.arg"
          ]
        }
      ]
    },
    {
      "module": "module.PublicVM[1]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/networkInterfaces/pbNIC1",
            "internal_domain_name_suffix": "nx4rsgl2lqcudchi2cpqbamwnc.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipConf1",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/Public"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-FF-60-F4",
            "name": "pbNIC1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "Week4-Project",
            "virtual_machine_id": "/subscriptions/3264c60b-2a16-4a00-b8af-ac9df711ec6f/resourceGroups/Week4-Project/providers/Microsoft.Compute/virtualMachines/PublicVM1"
          },
          "dependencies": [
            "azurerm_resource_group.arg",
            "azurerm_subnet.pbsb",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    }
  ]
}